Security_Group/SecurityGroup.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Create Security Group",
  "Parameters": {
    "VPC": {
      "Description": "VPC in which to launch this stack",
      "Type": "AWS::EC2::VPC::Id"
    },
    "SecurityGroupName": {
      "Description": "Security Group Name",
      "Type": "String"
    }
  },
  "Resources": {
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable SSH access via port 22",
        "GroupName": "SecurityGroupName",
        "VpcId": "VPC",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": null,
            "Value": "SecurityGroupName"
          }
        ]
      }
    }
  }
}
